force-app/main/default/objects/PM_Tool_Send_Email_History__c/PM_Tool_Send_Email_History__c.object-meta.xml
<CustomObject>
    <label>PM Tool Send Email History</label>
    <nameField>
        <displayFormat>SEH-{0000000000}</displayFormat>
        <label>PM Tool Send Email History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SendEmails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>