force-app/main/default/objects/PM_Tool_Send_Email_History__c/fields/Cc_Email__c.field-meta.xml
<CustomField>
    <fullName>Cc_Email__c</fullName>
    <label>Cc Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>