force-app/main/default/objects/PM_Tool_Send_Email_History__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>SendEmails</relationshipLabel>
    <relationshipName>SendEmails</relationshipName>
    <type>Lookup</type>
</CustomField>