force-app/main/default/objects/PM_Tool_Send_Email_History__c/fields/Schedule_To__c.field-meta.xml
<CustomField>
    <fullName>Schedule_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SendEmails</relationshipLabel>
    <relationshipName>SendEmails</relationshipName>
    <type>Lookup</type>
</CustomField>