force-app/main/default/objects/PM_Tool_Send_Email_History__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Error_Message__c</columns>
    <columns>Is_Success__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Cc_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>2/1/2023 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>